--- a/app/views/app_settings/_instructions.html.erb
+++ b/app/views/app_settings/_instructions.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade modal-large" id="notification-center">
+<div class="modal fade modal-large" id="instructions-here">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
