Post installation instructions modal.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
     <%= render partial: 'layouts/navbar_bottom' %>
 
     <%= render partial: 'layouts/notification_center' %>
+    <%= render partial: 'layouts/instructions' %>
 
 
     <!-- Javascripts ================================================== -->
