Updated the instructions sidebar,

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,55 +23,7 @@
     <div id="wrapper" class="toggled">
 
        <!-- Sidebar -->
-       <div id="sidebar-wrapper">
-           <ul class="sidebar-nav navbar-collapse"　role="navigation">
-             <li class="sidebar-brand">
-               <a type="button" class="pull-right" href="#menu-toggle" id="menu-close"><%= fa_icon 'times' %>&nbsp&nbsp</a>
-             </li>
-               <li class="sidebar-brand">
-                   <a href="#">
-                     Guide
-                   </a>
-               </li>
-               <li data-toggle="collapse" data-target="#deploy" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.deploy_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="deploy">
-                 <blockquote><small class="instructions"><%= t('instructions.deploy_body') %></small></blockquote>
-               </ul>
-               <li data-toggle="collapse" data-target="#signup" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.signup_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="signup">
-                  <blockquote><small class="instructions"><%= t('instructions.signup_body') %></small></blockquote>
-               </ul class="sub-menu collapse" id="zabbix">
-               <li data-toggle="collapse" data-target="#zabbix" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.select_zabbix_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="zabbix">
-                  <blockquote><small class="instructions"><%= t('instructions.select_zabbix_body') %></small></blockquote>
-               </ul>
-               <li data-toggle="collapse" data-target="#chef_server" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.sign_chef_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="chef_server">
-                  <blockquote><small class="instructions"><%= t('instructions.sign_chef_body') %></small></blockquote>
-               </ul>
-               <li data-toggle="collapse" data-target="#runlist" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.runlist_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="runlist">
-                  <blockquote><small class="instructions"><%= t('instructions.runlist_body') %></small></blockquote>
-               </ul>
-               <li data-toggle="collapse" data-target="#cook" class="collapsed active" onclick="toggleChange(this)">
-                   <a href="#"><%= t('instructions.cook_head') %></a>
-               </li>
-               <ul class="sub-menu collapse" id="cook">
-                  <blockquote><small class="instructions"><%= t('instructions.cook_body') %></small></blockquote>
-               </ul>
-           </ul>
-
-       </div>
+       <%= render partial: 'layouts/sidebar' %>       
        <!-- /#sidebar-wrapper -->
 
        <!-- Page Content -->
