Remove default event during keypair generation and fix sidebar overlapping during screen size change,

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
 
 
 
-    <div id="wrapper" class="toggled">
+    <div id="wrapper">
 
        <!-- Sidebar -->
-       <%= render partial: 'layouts/sidebar' %>       
+       <%= render partial: 'layouts/sidebar' %>
        <!-- /#sidebar-wrapper -->
 
        <!-- Page Content -->
