--- a/app/views/users_admin/_edit.html.erb
+++ b/app/views/users_admin/_edit.html.erb
@@ -105,6 +105,10 @@
 </div>
 
 <div class="col-md-12 col-sm-12">
+  <h5 class="page-header">Zabbix Servers </h5>
+</div>
+
+<div class="col-md-12 col-sm-12">
   <div class="form-actions-top">
     <button class="btn btn-primary btn-sm" @click="submit()">
       <%= t('common.btn.save_changes') %>
