--- a/app/assets/stylesheets/simple_sidebar.css
+++ b/app/assets/stylesheets/simple_sidebar.css
@@ -3,11 +3,6 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
- body {
-    overflow-x: hidden;
- }
-
 /* Toggle Styles */
 
 #wrapper {
@@ -16,6 +11,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
 }
 
 #wrapper.toggled {
@@ -46,6 +42,9 @@
     width: 100%;
     position: absolute;
     padding: 15px;
+    padding-top: 60px !important;
+    padding-bottom: 100px !important;
+    padding-right: 0 !important;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -100,31 +99,3 @@
     color: #444444;
     background: none;
 }
-/*
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}*/
