--- a/app/views/layouts/_navbar_top.html.erb
+++ b/app/views/layouts/_navbar_top.html.erb
@@ -40,11 +40,13 @@
             <li role="presentation"><%= link_to '日本語' , add_option_path(base_path, {lang: 'ja'}.merge(options)) %></li>
           </ul>
         </li>
+        <% if AppSetting.set? %>
+        <li class="dropdown">
+          <a href="#menu-toggle" role="button" class="pull-right" id="menu-toggle"><span class="text-info"><%= fa 'question-circle-o' %> <%= t 'common.btn.help'%></span></a>
+        </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#menu-toggle" role="button" class="pull-right" id="menu-toggle"><span class="text-info"><%= fa_icon 'universal-access' %> Guide</span></a>
-        </li>
         <% if user_signed_in? %>
         <li>
           <a href="#" role="button" id="notifications" data-toggle="modal" data-target="#notification-center"><%= glyphicon 'comment' %></a>
