--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -14,7 +14,7 @@
 
   <div class="panel-footer">
     <div class="btn-toolbar">
-      <%= link_to t('app_settings.btn.done'), root_path, class: 'btn btn-primary diasbled', id: 'done-appsetting', disabled: "disabled" %>
+      <%= link_to t('app_settings.btn.done'), root_path, class: 'btn btn-primary disabled', id: 'done-appsetting', disabled: "disabled" %>
     </div>
   </div>
 </div>
