--- a/app/views/layouts/_navbar_top.html.erb
+++ b/app/views/layouts/_navbar_top.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>" style="padding: 5px"><%= image_tag('skyhopper.png',  style: "display: inline;", alt: "brand") %></a>
+      <a class="navbar-brand" id="application-logo" href="<%= root_path %>" style="padding: 5px"><%= image_tag('skyhopper.png',  style: "display: inline;", alt: "brand") %></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
