--- a/app/views/app_settings/chef_server.html.erb
+++ b/app/views/app_settings/chef_server.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, "Chef Server") %>
 <h1 class="page-header">Chef Server</h1>
 
-<dl class="dl-horizontal">
-  <dt>
-    <%= t('chef_servers.btn.download_keys') %>
-  </dt>
-  <dd>
-    <%= link_to chef_keys_app_settings_path, {class: 'btn btn-sm btn-primary'} do %>
-      <span class="glyphicon glyphicon-download-alt"></span>
+<div class="jumbotron">
+  <h2><%= t('chef_servers.btn.download_keys') %></h2>
+  <p><%= t('chef_servers.msg.chef_instruction') %></p>
+  <p>
+    <%= link_to chef_keys_app_settings_path, {class: 'btn btn-lg btn-primary'} do %>
+      <span class="glyphicon glyphicon-download-alt">
+        <%= t('common.btn.download') %>
+      </span>
     <% end %>
-    <span class="help-block"><%= t('chef_servers.msg.chef_instruction') %></span>
-  </dd>
-</dl>
+  </p>
+</div>
