--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -3,6 +3,11 @@
 <h1 class="page-header"><%= t 'app_settings.title.show' %></h1>
 
 <div id="indexElement" class="panel panel-primary" v-cloak>
+  <div class="alert alert-dismissible alert-warning" v-if="!isAllowedBrowser">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <h4><%= I18n.t("app_settings.warning") %></h4>
+    <p><%= raw I18n.t("app_settings.msg.warning_msg") %></p>
+  </div>
   <div class="panel-heading">
     <%= I18n.t("app_settings.title.setup") %>
 
