Add a short description about the database dump

--- a/app/views/app_settings/db.html.erb
+++ b/app/views/app_settings/db.html.erb
@@ -6,6 +6,7 @@
     <form class="form-horizontal well">
       <fieldset>
         <legend><%= t('common.btn.export') %></legend>
+        <p><%= t('app_settings.msg.db_export', {env: Rails.env.capitalize}) %></p>
         <a href="<%= export_db_app_settings_path %>" class="btn btn-primary btn-lg" style="width: 100%">
           <span class="glyphicon glyphicon-export"></span>
           <%= t('common.btn.export') %>
