--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -2,23 +2,13 @@
 
 <form class="form-horizontal" id="app-settings-form" role="form">
 
-  <fieldset id="directory-hint">
-    <legend>
-      <%= t('app_settings.title.system') %>
-      <% if !AppSetting.set? %>
-        <a href="#" role="button" class="pull-right" id="flexi_form_start" href="javascript:void(0);"><span class="text-info"><%= fa 'question-circle-o' %> <%= t('common.btn.help') %></span></a>
-      <% end %>
-    </legend>
+  <fieldset>
+    <legend><%= t('app_settings.title.system') %></legend>
     <div class="form-group">
       <label for="log_directory" class="col-sm-3 control-label"><%= t 'app_settings.log_directory' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" v-model="params.log_directory" value='/app/skyhopper/logs'  pattern="^[~/].+" readonly="true">
+        <input type="text" class="form-control" id="log_directory" name="log_directory" pattern="^[~/].+" required>
         <p class="help-block"><%= I18n.t('app_settings.msg.log_directory') %></p>
-      </div>
-      <label for="app_directory" class="col-sm-3 control-label"><%= t 'app_settings.app_directory' %></label>
-      <div class="col-sm-7">
-        <input type="text" class="form-control" value='/app/skyhopper' pattern="^[~/].+" readonly="true">
-        <p class="help-block"><%= I18n.t('app_settings.msg.app_directory') %></p>
       </div>
     </div>
   </fieldset>
@@ -27,23 +17,26 @@
   <fieldset>
     <legend><%= t('app_settings.title.aws') %>&nbsp;<button type="button" class="btn btn-link" data-toggle="popover" title="AWS" data-content="<%= t('app_settings.msg.aws_description') %>"><%= glyphicon 'question-sign' %></button></legend>
 
-    <div class="form-group" data-step="1" data-intro="<%= t('app_settings.intro.aws_keys') %>">
+    <div class="form-group">
       <label for="access_key" class="col-sm-3 control-label"><%= t 'app_settings.access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" :disabled="creating" class="form-control" v-model="params.access_key" pattern="[^\s]+" required>
+        <input type="text" class="form-control" id="access_key" name="access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.access_key') %></p>
       </div>
+    </div>
+
+    <div class="form-group">
       <label for="secret_access_key" class="col-sm-3 control-label"><%= t 'app_settings.secret_access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" id="secret_access_key" :disabled="creating" class="form-control form-control-masked" v-model="params.secret_access_key" pattern="[^\s]+" required>
+        <input type="text" class="form-control form-control-masked" id="secret_access_key" name="secret_access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.secret_access_key') %></p>
       </div>
     </div>
 
-    <div class="form-group" data-step="2" data-intro="<%= t('app_settings.intro.aws_region') %>">
+    <div class="form-group">
       <label for="aws_region" class="col-sm-3 control-label"><%= t 'app_settings.aws_region' %></label>
       <div class="col-sm-7">
-        <select :disabled="creating" class="form-control" v-model="params.aws_region" name="aws_region">
+        <select class="form-control" id="aws_region" name="aws_region">
           <%= please_select_option %>
           <%= options_for_select(AWS::Regions) %>
         </select>
@@ -51,48 +44,17 @@
       </div>
     </div>
 
-    <div class="form-group" data-position="top" v-if="!params.keypair_name" data-step="3" data-intro="<%= t('app_settings.intro.aws_keypair') %>">
+    <div class="form-group">
       <label class="col-sm-3 control-label"><%= t 'app_settings.aws_keypair' %></label>
       <div class="col-sm-7">
-        <select :disabled="creating" class="form-control" v-model="key_select">
-          <%= please_select_option %>
-          <option value="1"> <%= t('app_settings.title.new_keypair') %> </option>
-          <option value="2"> <%= t('app_settings.title.exist_keypair') %> </option>
-        </select>
+        <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
+        <input id="keypair_name" class="form-control ec2-private-key-name" type="text" name="keypair_name" required maxlength="255">
+
+        <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
+        <textarea id="keypair_value" class="form-control ec2-private-key-value" name="keypair_value" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7"></textarea>
         <p class="help-block"><%= t('app_settings.msg.aws_keypair') %></p>
       </div>
-      <label v-if="key_select == 1" class="col-sm-3 control-label"></label>
-      <div class="col-sm-7" v-if="key_select == 1">
-        <label for="keypair_name" class="control-label" v-if="params.keypair_name">{{params.keypair_name}}.pem</label>
-        <p v-if="!keysExists" class="text-warning"><%= t('app_settings.msg.insert_key') %></p>
-        <button v-if="keysExists" class="btn btn-sm btn-default" :disabled="!keysExists" @click="create_key"><%= t('app_settings.btn.create_download') %></button>
-
-      </div>
-
-      <label v-if="key_select == 2" class="col-sm-3 control-label"></label>
-      <div class="col-sm-7" v-if="key_select == 2">
-          <div v-if="!params.keypair_name">
-              <div class="dropzone-area" drag-over="handleDragOver">
-                  <div class="dropzone-text">
-                      <span class="dropzone-title"><%= t('app_settings.title.drop_file') %></span></br>
-                      <span class="dropzone-info"><%= t('app_settings.title.pem_file') %></span>
-                  </div>
-                  <input type="file" @change="onFileChange">
-              </div>
-          </div>
-      </div>
     </div>
-
-
-    <div class="form-group">
-      <label class="col-sm-3 control-label" v-if="params.keypair_name"><%= t 'app_settings.aws_keypair_file' %></label>
-      <div class="col-sm-7">
-          <label  class="control-label" v-if="params.keypair_name">{{params.keypair_name}}.pem</label>
-          <a class="text text-link text-danger" :disabled="creating" @click="removeFile" v-if="params.keypair_name && !creating"><%= fa_icon "times" %></a>
-      </div>
-    </div>
-
-
   </fieldset>
 
 </form>
