--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -53,6 +53,12 @@
             <%= t 'helpers.links.edit' %>
         </a>&nbsp
       </div>
+
+      <div class="pull-right">
+        <a class="btn btn-default btn-sm" @click="reload()">
+            <span class='glyphicon glyphicon-refresh'></span>
+        </a>&nbsp
+      </div>
     </div>
 
     <demo-grid
@@ -60,12 +66,17 @@
     :columns="gridColumns"
     :filter-key="searchQuery"
     :picked.sync="picked"
-    :index="index">
+    :index="index"
+    :url="url">
     </demo-grid>
+    <div v-if="is_empty" v-cloak>
+      <%= t 'infrastructures.msg.empty-list' %>
+    </div>
+    <div v-if="loading">
+      <span class="loader"></span>
+      <%= t 'common.msg.loading' %>
+    </div>
   </div>
-
-  <div  id="empty" style="display: none;"></div>
-  <span id="loading"><div class="loader"></div> <%= t 'common.msg.loading' %></span>
   <hr>
 
 
