--- a/app/views/serverspecs/index.html.erb
+++ b/app/views/serverspecs/index.html.erb
@@ -35,6 +35,12 @@
       </a>&nbsp
     </div>
 
+    <div class="pull-right" v-cloak>
+      <a class="btn btn-default btn-sm" @click="reload()">
+          <span class='glyphicon glyphicon-refresh'></span>
+      </a>&nbsp
+    </div>
+
   </div>
 
 
@@ -43,8 +49,16 @@
   :columns="gridColumns"
   :filter-key="searchQuery"
   :picked.sync="picked"
-  :index="index">
+  :index="index"
+  :url="url">
   </demo-grid>
+  <div v-if="is_empty" v-cloak>
+    <%= t 'cf_templates.msg.empty-list' %>
+  </div>
+  <div v-if="loading">
+    <span class="loader"></span>
+    <%= t 'common.msg.loading' %>
+  </div>
 </div>
 
 
