Zabbix server new form for javascript/VUEjs implementation model

--- a/app/views/zabbix_servers/index.html.erb
+++ b/app/views/zabbix_servers/index.html.erb
@@ -47,7 +47,7 @@
   :url="url">
   </demo-grid>
 
-  <div v-if="is_empty">
+  <div v-if="is_empty" v-cloak>
     <%= t 'zabbix_servers.msg.empty-list' %>
   </div>
   <div v-if="loading">
