--- a/app/views/zabbix_servers/_form.html.erb
+++ b/app/views/zabbix_servers/_form.html.erb
@@ -15,32 +15,32 @@
     <%= f.label :fqdn, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
       <% if @zabbix_server.id == 1 %>
-        <%= f.text_field :fqdn, class: 'form-control', readonly: true %>
+        <input type="text" value="<%= @zabbix_server.fqdn %>" class="form-control"  v-model="params.fqdn" pattern="[^\s]+" readonly="true">
       <% else %>
-        <%= f.text_field :fqdn, class: 'form-control', required: true %>
+        <input type="text" class="form-control"  v-model="params.fqdn" pattern="[^\s]+" required>
       <% end %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :username, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_field :username, class: 'form-control', required: true %>
+      <input type="text" class="form-control" v-model="params.username" pattern="[^\s]+" required>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :password, class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_field :password, class: 'form-control', type: 'password', required: true %>
+      <input type="password" class="form-control" v-model="params.password" pattern="[^\s]+" required>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :details, t('zabbix_servers.details'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_area :details, class: 'form-control' %>
+      <textarea id="details" class="form-control" v-model="params.details" rows="4"></textarea>
     </div>
   </div>
   <div class="form-actions-top">
-    <%= f.submit nil, class: 'btn btn-primary create' %>
+    <button class="btn btn-primary" :disabled="!required_filed" @click="register">Register</button>
     <%= link_to t('.cancel', default: t("helpers.links.cancel")), zabbix_servers_path, class: 'btn btn-default' %>
   </div>
 
