--- a/app/views/zabbix_servers/new.html.erb
+++ b/app/views/zabbix_servers/new.html.erb
@@ -3,4 +3,6 @@
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
+<div id="indexElement" v-el:node>
 <%= render :partial => 'form' %>
+</div>
