--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -18,92 +18,6 @@
     </p>
   </div>
 
-
-  <!-- export modal -->
-  <div class="modal fade" id="exportModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel"><%= t('infrastructures.database') %></h4>
-        </div>
-        <div class="modal-body">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h5 class="panel-title"><span class="glyphicon glyphicon-info-sign"></span> Info</h5>
-            </div>
-            <div class="panel-body">
-              <p><%= t('databases.msg.db_export')%></p>
-              <ul>
-                <li> <%= t('databases.msg.env', {env: Rails.env.capitalize}) %> </li>
-                <li><%= t('databases.msg.secret')%></li>
-                <li><%= t('databases.msg.db_key')%></li>
-              </ul>
-            </div>
-          </div>
-          <form action="<%= export_databases_path %>" method="POST">
-            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
-            <button type="submit" class="btn btn-primary btn-lg btn-block" :disabled="loading" @click="">
-              <div-loader v-if="loading"></div-loader>
-              <span v-if="!loading">
-                <span class="glyphicon glyphicon-export"></span>
-                <%= t('common.btn.export') %>
-              </span>
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- import modal -->
-  <div class="modal fade" id="importModal" tabindex="-1" role="dialog" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel"><%= t('infrastructures.database') %></h4>
-        </div>
-        <div class="modal-body">
-          <div class="alert alert-warning">
-            <h4><span class="glyphicon glyphicon-alert"></span> Warning</h4>
-            <p><%= t('databases.msg.db_import_warning') %></p>
-          </div>
-
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h5 class="panel-title"><span class="glyphicon glyphicon-info-sign"></span> Info</h5>
-            </div>
-            <div class="panel-body">
-              <p><%= t('databases.msg.db_import')%></p>
-              <ul>
-                <li> <%= t('databases.msg.env', {env: Rails.env.capitalize}) %> </li>
-                <li><%= t('databases.msg.secret')%></li>
-                <li><%= t('databases.msg.db_key')%></li>
-              </ul>
-            </div>
-          </div>
-          <form action="<%= import_databases_path %>" method="POST" enctype="multipart/form-data" class="form-horizontal">
-            <fieldset :disabled="loading">
-              <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
-              <div class="form-group">
-                <label for="file" class="col-sm-2 control-label">ZIP File</label>
-                <div class="col-sm-10">
-                  <input type="file" accept="application/zip" name="file" class="form-control" required>
-                </div>
-              </div>
-              <button type="submit" class="btn btn-primary btn-lg btn-block">
-                <div-loader v-if="loading"></div-loader>
-                <span v-if="!loading">
-                  <span class="glyphicon glyphicon-export"></span>
-                  <%= t('common.btn.import') %>
-                </span>
-              </button>
-            </fieldset>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <%= render partial: 'modal_export' %>
+  <%= render partial: 'modal_import' %>
 </div>
