--- a/app/views/databases/_modal_import.html.erb
+++ b/app/views/databases/_modal_import.html.erb
@@ -37,7 +37,7 @@
             <button type="submit" class="btn btn-primary btn-lg btn-block">
               <div-loader v-if="loading"></div-loader>
               <span v-if="!loading">
-                <span class="glyphicon glyphicon-export"></span>
+                <span class="glyphicon glyphicon-import"></span>
                 <%= t('common.btn.import') %>
               </span>
             </button>
