Enable to setup SkyHopper by importing DB

--- a/app/views/app_settings/show.html.erb
+++ b/app/views/app_settings/show.html.erb
@@ -5,6 +5,10 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <%= I18n.t("app_settings.title.setup") %>
+    <button type="button" class="btn btn-sm btn-success" style="float: right" data-toggle="modal" data-target="#importModal">
+      <span class="glyphicon glyphicon-import"></span>
+      <%= t('databases.import_db') %>
+    </button>
   </div>
   <div class="panel-body">
     <%= render partial: 'panel_content_system' %>
@@ -17,3 +21,5 @@
     </div>
   </div>
 </div>
+
+<%= render partial: 'databases/modal_import' %>
