--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -7,10 +7,12 @@
     <h2><%= t('databases.db_management') %></h2>
     <p></p>
     <p>
-      <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exportModal">
-        <span class="glyphicon glyphicon-export"></span>
-        <%= t('common.btn.export') %>
-      </button>
+      <% if app_setting_is_set %>
+        <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exportModal">
+          <span class="glyphicon glyphicon-export"></span>
+          <%= t('common.btn.export') %>
+        </button>
+      <% end %>
       <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#importModal">
         <span class="glyphicon glyphicon-import"></span>
         <%= t('common.btn.import') %>
@@ -18,6 +20,6 @@
     </p>
   </div>
 
-  <%= render partial: 'modal_export' %>
+  <%= render partial: 'modal_export' if app_setting_is_set %>
   <%= render partial: 'modal_import' %>
 </div>
