--- a/app/views/zabbix_servers/_form.html.erb
+++ b/app/views/zabbix_servers/_form.html.erb
@@ -40,8 +40,9 @@
     </div>
   </div>
   <div class="form-actions-top">
-    <button class="btn btn-primary" :disabled="!required_filed" @click="register">Register</button>
-    <%= link_to t('.cancel', default: t("helpers.links.cancel")), zabbix_servers_path, class: 'btn btn-default' %>
+    <button v-if="!new_loader" class="btn btn-primary" :disabled="!required_filed && !new_loader" @click="register">Register</button>
+    <span v-if="new_loader" v-cloak><%= link_to t('.cancel', default: t("helpers.links.background")), zabbix_servers_path, class: 'btn btn-primary' %></span>
+    <span v-if="!new_loader"><%= link_to t('.cancel', default: t("helpers.links.cancel")), zabbix_servers_path, class: 'btn btn-default' %></span>
   </div>
 
 <% end %>
